# Sci-Fi-Notes

./: .cursorrules  .eslintrc.json  NoteSettings.vue  OPTIMIZATION.md  README.md  StickyNotesApp.vue  index.html  main.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
assets/: tailwind.css
components/: AISettings.vue  AdvancedSearch.vue  AppSettings.vue  CategoryManager.vue  EffectsSettings.vue  ImageAttachments.vue  MarkdownSettings.vue  PerformanceMonitor.vue  ReminderSettings.vue  SyncSettings.vue  ThemeSettings.vue  VoiceCommandSettings.vue
scripts/: optimize-build.js
services/: ai-service.ts  data-service.ts  effects-service.ts  image-service.ts  markdown-service.ts  reminder-service.ts  search-service.ts  storage-service.ts  sync-service.ts  theme-service.ts  tray-service.ts  update-service.ts  voice-service.ts  windows-service.ts
src/: App.vue  env.d.ts  globals.d.ts  index.css  main.ts  shims-vue.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/src/: api.rs  lib.rs  main.rs
src/assets/styles/: variables.scss
src/components/: EffectsSettings.vue  StickyNotesApp.vue  VoiceCommandSettings.vue  index.ts
src/components/SciNoteEditor/: index.vue
src/components/SciNoteList/: index.vue
src/components/SciShortcutManager/: index.vue
src/services/: effects-service.ts  search-service.ts  storage-service.ts  voice-service.ts
src/store/: noteStore.ts
src/stores/: noteStore.ts
